# developer-news-signal-pipeline

./: .gitignore  CLAUDE.md  LICENSE  README.md  TASK-BRIEF.md  hn_signals.db  index.html  latest-stories.json  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
src/hn_signal/: __init__.py  cli.py  client.py  models.py  pipeline.py  report.py  scoring.py  storage.py
tests/: test_pipeline.py  test_report.py  test_scoring.py  test_storage.py
