[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "developer-news-signal-pipeline"
version = "0.1.0"
description = "Backend data pipeline that collects Hacker News stories, normalises them, scores developer signals, and stores reviewable snapshots."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Dean Wilshaw" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
hn-signal = "hn_signal.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
